--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="https://www.instagram.com/guifecone/" target="_blank">
             <ion-icon name="logo-instagram"></ion-icon>
           </a>
-          <a href="#" target="_blank">
+          <a href="https://woozy-brochure-fa1.notion.site/Meus-Certificados-7c9f5291c02f40eb9fdc28e32f117e5c?pvs=4" target="_blank">
             <ion-icon name="folder-outline"></ion-icon>
           </a>
           <a href="https://www.linkedin.com/in/guilherme-costa-16142b289/" target="_blank">
