ajusto do #container e adição do link dos certificados que faltva.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a href="https://www.instagram.com/guifecone/" target="_blank">Instagram</a>
             </li>
             <li>
-              <a href="#" target="_blank">Veja meus certificados</a>
+              <a href="https://woozy-brochure-fa1.notion.site/Meus-Certificados-7c9f5291c02f40eb9fdc28e32f117e5c?pvs=4" target="_blank">Veja meus certificados</a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/guilherme-costa-16142b289/" target="_blank">Linkedin</a>
